--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ var villes = { // seules les villes ajoutées dans ce tableau sont affichées su
   "Cuincy": { "lat": 43.500, "lon": -1.467 },
   "Vancouver": { "lat": 43.500, "lon": -1.467 },
   "Marly-Gomont": { "lat": 43.500, "lon": -1.467 },
-  "Ferfay": { "lat": 43.500, "lon": -1.467 },
+  "Ferfay": { "lat": 50.5167, "lon": 2.4167 },
   "Osaka": { "lat": 43.500, "lon": -1.467 }
 };
 
@@ -244,10 +244,10 @@ window.onload = function(){
           </div>
           <div class="card-image">
             <!-- Utilisez de préférence des images de taille identique partout (ici : 320x200)-->
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg/320px-La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg" class="img-responsive">
+            <img width=300px src="http://ferfay.free.fr/images/mairieferfay.jpg">
           </div>
           <div class="card-body bg-secondary text-dark">
-            Insérez description...
+            Ferfay est une commune française située dans le département du Pas-de-Calais, en région Hauts-de-France. Petit Village actif et sympatique, chaque année s'y déroule le spectacle de la Légende des Princes Irlandais.
           </div>
         </div>
       </div>
